[gd_scene load_steps=2 format=2]

[ext_resource path="res://Player/AUI/AUIPlayer.gd" type="Script" id=1]

[node name="AUI" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, 15, 30, 0, 0, -15 )

[node name="ShootPosition" type="Position2D" parent="."]
position = Vector2( 38, 0 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 1024, 30, 30, 0, 1024, -30 )

[node name="ShootCooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="ShootCooldownTimer" to="." method="_on_ShootCooldownTimer_timeout"]
